before adding gsscholar crawl code

--- a/openreview.ipynb
+++ b/openreview.ipynb
@@ -723,6 +723,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_cnt, find_cnt = 0, 0\n",
+    "for id in scholar_search.chair_profile.keys():\n",
+    "    resp = scholar_search.get_scholar(query=id, simple=True, top_n=3, print=False)\n",
+    "    total_cnt += 1\n",
+    "    if len(resp) > 0:\n",
+    "        find_cnt += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 55)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_cnt, find_cnt\n",
+    "# 75, 55"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://scholar.google.de/citations?user=hs2WrYYAAAAJ&hl=de\n",
+    "https://scholar.google.co.uk/citations?user=wHcpf58AAAAJ\n",
+    "https://scholar.google.de/citations?user=yazO-mMAAAAJ&hl=en\n",
+    "\n",
+    "04TuVhEAAAAJ\n",
+    "8SK2fPAAAAAJ\n",
+    "uwOf3oEAAAAJ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_cnt, find_cnt = 0, 0\n",
+    "for id in scholar_search.reviewer_profile.keys():\n",
+    "    resp = scholar_search.get_scholar(query=id, simple=True, top_n=3, print=False)\n",
+    "    total_cnt += 1\n",
+    "    if len(resp) > 0:\n",
+    "        find_cnt += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(574, 302)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_cnt, find_cnt\n",
+    "# 504, 302"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5500770416024653"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(55+302)/(75+574)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
