before changing back to selenium

--- a/openreviewdirect.ipynb
+++ b/openreviewdirect.ipynb
@@ -58852,7 +58852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58911,12 +58911,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "response = requests.get('https://scholar.google.com/citations?user=byCWPiwAAAAJ&hl=en')\n",
+    "response = requests.get('https://scholar.google.com/citations?user=RkI8h-wAAAAJ&hl=en')\n",
     "resp_str = response.content.decode('utf-8', errors='ignore')\n",
     "soup = BeautifulSoup(resp_str, 'html.parser')\n"
    ]
@@ -59018,20 +59018,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx_list = soup.find_all(class_='gsc_g_hist_wrp')[0].find_all(class_='gsc_md_hist_b')[0]"
+    "def get_signle_author(element):\n",
+    "            li=[]\n",
+    "            li.append(element.find_elements_by_tag_name(\"a\")[0].get_attribute('href'))\n",
+    "            li.append(element.find_elements_by_tag_name(\"a\")[0].get_attribute('textContent'))\n",
+    "            for i in element.find_elements_by_class_name(\"gsc_rsb_a_ext\"):\n",
+    "                li.append(i.get_attribute('textContent'))\n",
+    "            return li"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rsb = soup.find_all(class_='gsc_rsb')[0]"
+    "qwq = soup.find_all(class_='gsc_g_hist_wrp')\n",
+    "if (len(qwq)==0):\n",
+    "    pass\n",
+    "else:\n",
+    "    idx_list = qwq[0].find_all(class_=\"gsc_md_hist_b\")[0]\n",
+    "    years =  [i.text for i in idx_list.find_all(class_=\"gsc_g_t\")] # str\n",
+    "    cites =  [i.text for i in idx_list.find_all(class_=\"gsc_g_al\")] # str\n",
+    "    rsb = soup.find_all(class_=\"gsc_rsb\")[0]\n",
+    "    Citations_table=[i.text for i in rsb.find_all(class_=\"gsc_rsb_std\")]\n",
+    "    Co_authors = rsb.find_all(class_=\"gsc_rsb_a\")\n",
+    "    if len(Co_authors) == 0:\n",
+    "        Co_authors = None\n",
+    "    else:\n",
+    "        Co_authors = [i for i in rsb.find_all(class_=\"gsc_rsb_a\")[0].find_all(class_=\"gsc_rsb_a_desc\")]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<button class=\"gs_btnPD gs_in_ib gs_btn_flat gs_btn_lrge gs_btn_lsu\" id=\"gsc_bpf_more\" type=\"button\"><span class=\"gs_wr\"><span class=\"gs_ico\"></span><span class=\"gs_lbl\">Show more</span></span></button>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all(class_='gs_btnPD')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "button = soup.find_all(class_='gsc_a_tr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "ResultSet object has no attribute 'text'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2430111/1259849598.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbutton\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'gsc_a_at'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/env37/lib/python3.7/site-packages/bs4/element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2288\u001b[0m         \u001b[0;34m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2289\u001b[0m         raise AttributeError(\n\u001b[0;32m-> 2290\u001b[0;31m             \u001b[0;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2291\u001b[0m         )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: ResultSet object has no attribute 'text'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
+     ]
+    }
+   ],
+   "source": [
+    "button[0].find_all(class_='gsc_a_at').text"
    ]
   },
   {
