before iterate over all dataset

--- a/openreviewdirect.ipynb
+++ b/openreviewdirect.ipynb
@@ -780,7 +780,192 @@
      "output_type": "stream",
      "text": [
       "[Info] Found 20 scholars are in the same name.\n",
-      "Not find by gs_sid\n"
+      "Not find by gs_sid\n",
+      "[Info] In total 1 scholar is found:\n",
+      "[\n",
+      "  {\n",
+      "    \"academic\": false,\n",
+      "    \"academic_age\": 13.0,\n",
+      "    \"academic_lifespan\": 13.0,\n",
+      "    \"cit_sum_before_year\": {\n",
+      "      \"2014\": 9,\n",
+      "      \"2015\": 31,\n",
+      "      \"2016\": 67,\n",
+      "      \"2017\": 121,\n",
+      "      \"2018\": 242,\n",
+      "      \"2019\": 465,\n",
+      "      \"2020\": 810,\n",
+      "      \"2021\": 1488\n",
+      "    },\n",
+      "    \"citation_table\": [\n",
+      "      \"1664\",\n",
+      "      \"22\"\n",
+      "    ],\n",
+      "    \"domain_labels\": [\n",
+      "      \"crowdsourcing\",\n",
+      "      \"machine learning\",\n",
+      "      \"incentive and consensus\"\n",
+      "    ],\n",
+      "    \"gender\": \"F\",\n",
+      "    \"gs_sid\": \"jKrIVCIAAAAJ\",\n",
+      "    \"organization\": \"Computer Science and Engineering, UC Santa Cruz\",\n",
+      "    \"organization_code\": \"6192028974562668508\",\n",
+      "    \"paper_num\": 74,\n",
+      "    \"cites\": {\n",
+      "      \"years\": [\n",
+      "        \"2014\",\n",
+      "        \"2015\",\n",
+      "        \"2016\",\n",
+      "        \"2017\",\n",
+      "        \"2018\",\n",
+      "        \"2019\",\n",
+      "        \"2020\",\n",
+      "        \"2021\",\n",
+      "        \"2022\"\n",
+      "      ],\n",
+      "      \"cites\": [\n",
+      "        \"9\",\n",
+      "        \"22\",\n",
+      "        \"36\",\n",
+      "        \"54\",\n",
+      "        \"121\",\n",
+      "        \"223\",\n",
+      "        \"345\",\n",
+      "        \"678\",\n",
+      "        \"153\"\n",
+      "      ]\n",
+      "    },\n",
+      "    \"coauthors\": [\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=WiIM-MgAAAAJ&hl=en\",\n",
+      "        \"Mingyan Liu\",\n",
+      "        \"Professor of Electrical Engineering and Computer Science, University of Michigan\",\n",
+      "        \"Verified email at umich.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=JUn8PgwAAAAJ&hl=en\",\n",
+      "        \"David C. Parkes\",\n",
+      "        \"George F. Colony Professor of Computer Science, Harvard University\",\n",
+      "        \"Verified email at eecs.harvard.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=zxWeH6EAAAAJ&hl=en\",\n",
+      "        \"Armin Sarabi\",\n",
+      "        \"Assistant Research Scientist, University of Michigan\",\n",
+      "        \"Verified email at umich.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=KBG_JlAAAAAJ&hl=en\",\n",
+      "        \"Goran Radanovi\\u0107\",\n",
+      "        \"Research Group Leader, Max Planck Institute for Software Systems\",\n",
+      "        \"Verified email at mpi-sws.org\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=uvRJd_sAAAAJ&hl=en\",\n",
+      "        \"Jing Zhang\",\n",
+      "        \"University of Michigan\",\n",
+      "        \"Verified email at umich.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=sMnocAYAAAAJ&hl=en\",\n",
+      "        \"Michael Donald Bailey\",\n",
+      "        \"University of Illinois\",\n",
+      "        \"Verified email at illinois.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=6z_XWYcAAAAJ&hl=en\",\n",
+      "        \"Berk Ustun\",\n",
+      "        \"UCSD\",\n",
+      "        \"Verified email at ucsd.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=x_7xA0UAAAAJ&hl=en\",\n",
+      "        \"Yiling Chen\",\n",
+      "        \"Harvard University\",\n",
+      "        \"Verified email at seas.harvard.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=rbleSIcAAAAJ&hl=en\",\n",
+      "        \"Parinaz Naghizadeh\",\n",
+      "        \"Assistant Professor of ISE & ECE, Ohio State University\",\n",
+      "        \"Verified email at osu.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=4T2B-e8AAAAJ&hl=en\",\n",
+      "        \"Ji Liu\",\n",
+      "        \"Stony Brook University\",\n",
+      "        \"Verified email at stonybrook.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=9Kw4t_kAAAAJ&hl=en\",\n",
+      "        \"Christos Dimitrakakis\",\n",
+      "        \"Professor, University of Oslo\",\n",
+      "        \"Verified email at a3.epfl.ch\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=DWKoeW0AAAAJ&hl=en\",\n",
+      "        \"Chien-Ju Ho\",\n",
+      "        \"Washington University in St. Louis\",\n",
+      "        \"Verified email at wustl.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=NGIsUesAAAAJ&hl=en\",\n",
+      "        \"Tamer Ba\\u015far\",\n",
+      "        \"Swanlund Endowed Chair Emeritus & CAS Professor Emeritus of ECE, University of Illinois\",\n",
+      "        \"Verified email at illinois.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=K8vJkTcAAAAJ&hl=en\",\n",
+      "        \"Bo Li\",\n",
+      "        \"University of Illinois at Urbana\\u2013Champaign\",\n",
+      "        \"Verified email at illinois.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=k2RheI8AAAAJ&hl=en\",\n",
+      "        \"Yitao Liang\",\n",
+      "        \"Assistant Professor, Peking University\",\n",
+      "        \"Verified email at pku.edu.cn\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=IFV_RdMAAAAJ&hl=en\",\n",
+      "        \"Jie Zhang\",\n",
+      "        \"Associate Professor, Computer Science and Engineering, NTU, Singapore\",\n",
+      "        \"Verified email at ntu.edu.sg\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=8r28SnIAAAAJ&hl=en\",\n",
+      "        \"Jing Deng\",\n",
+      "        \"Professor of Computer Science, UNC Greensboro\",\n",
+      "        \"Verified email at uncg.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=f6terwoAAAAJ&hl=en\",\n",
+      "        \"Tudor Dumitras\",\n",
+      "        \"Assistant Professor, University of Maryland, College Park\",\n",
+      "        \"Verified email at umiacs.umd.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=Juoqtj8AAAAJ&hl=en\",\n",
+      "        \"Chaowei Xiao\",\n",
+      "        \"Nvidia Research & ASU\",\n",
+      "        \"Verified email at umich.edu\"\n",
+      "      ],\n",
+      "      [\n",
+      "        \"https://scholar.google.com/citations?user=H5fGjPkAAAAJ&hl=en\",\n",
+      "        \"Sahand Ahmad\",\n",
+      "        \"Director of Systematic Trading Strategies\",\n",
+      "        \"Verified email at umich.edu\"\n",
+      "      ]\n",
+      "    ],\n",
+      "    \"name\": \"Yang Liu\",\n",
+      "    \"url\": \"https://scholar.google.com/citations?hl=en&user=jKrIVCIAAAAJ\",\n",
+      "    \"top_num_coauthors\": 20.0,\n",
+      "    \"num_domain\": 3.0,\n",
+      "    \"top_topic_diversity\": 19.0,\n",
+      "    \"num_coauthors_all_wwo_ai\": 85,\n",
+      "    \"organization_top\": 0.0\n",
+      "  }\n",
+      "]\n"
      ]
     }
    ],
